signin and signup

--- a/Hotel_DreamLand/src/app/main-page/main-page.component.html
+++ b/Hotel_DreamLand/src/app/main-page/main-page.component.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hotel Delicious</title>
+  <title>Hotel DreamLand</title>
 </head>
+
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
   <!-- navbar starts-->
   <header class="header_wrapper">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src=".\assets\images\logo.png" alt="logo">
+          <img src=".\assets\images\name logo.png" class="logo" alt="logo">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -22,53 +25,58 @@
               <a class="nav-link active" aria-current="page" routerLink="/home/home-page">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"  routerLink="/home/about">About</a>
+              <a class="nav-link" routerLink="/about/about-page">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"  routerLink="/home/rooms">Rooms</a>
+              <a class="nav-link" routerLink="/rooms/rooms-page">Rooms</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"  routerLink="/home/services">Services</a>
+              <a class="nav-link" routerLink="/services/services-page">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"  routerLink="/home/team">Team</a>
+              <a class="nav-link" routerLink="/team/team-page">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"  routerLink="/home/gallery">Gallery</a>
+              <a class="nav-link" routerLink="/gallery/gallery-page">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"  routerLink="/home/price">Price</a>
+              <a class="nav-link" routerLink="/price/price-page">Price</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"  routerLink="/home/blog">Blog</a>
+              <a class="nav-link" routerLink="/blog/blog-page">Blog</a>
             </li>
             <li class="nav-item mt-3 mt-lg-0">
-              <a class="main-btn"  routerLink="/booking-area/book-now">Book Now</a>
+              <a class="main-btn" routerLink="/booking-area/book-now">Book Now</a>
             </li>
+            <li class="nav-item">
+              <i routerLink="/signin" class="bi bi-person-circle"></i>
+            </li>
+
           </ul>
         </div>
       </div>
     </nav>
   </header>
-   <!-- navbar ends-->
-   
-   <!-- banner starts -->
-<section id="home" class="banner_wrapper p-0">
-  <div class="swiper mySwiper">
-    <div class="swiper-wrapper">      
-      <div class="swiper-slide">
-        <div class="slide-caption text-center">
-          <div>
-            <h1>Welcome to Hotel DreamLand</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe facere maxime molestiae illo similique suscipit iusto nobis nihil tenetur.</p>
+  <!-- navbar ends-->
+
+  <!-- banner starts -->
+  <section id="home" class="banner_wrapper p-0">
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="slide-caption text-center">
+            <div>
+              <h1>Welcome to Hotel DreamLand</h1>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe facere maxime molestiae illo similique
+                suscipit iusto nobis nihil tenetur.</p>
+            </div>
           </div>
         </div>
       </div>
-      
     </div>
-  </div>
-</section>
+  </section>
+  <!-- banner ends -->
 
-<!-- banner ends -->
 </body>
+
 </html>
