--- a/Hotel_DreamLand/src/app/main-page/main-page.component.css
+++ b/Hotel_DreamLand/src/app/main-page/main-page.component.css
@@ -1,3 +1,6 @@
+.logo{
+  height:70px
+}
 .main-btn{
   font-size: 1rem;
   font-weight: 500;
@@ -10,6 +13,7 @@
   line-height:1.75rem;
   display: inline-block;
   transition : all 0.3s ease-out 0s;
+  margin-top:10px
 }
 
 .main-btn:hover{
@@ -103,20 +107,20 @@ color: orange;
   top:0;
   left: 0;
   width: 100%;
-  z-index: 9999;
-  background-color: rgba(255,255,255,.85);
+  z-index: 99;
+  background-color: rgba(255,255,255,0.85);
   animation: 500ms ease-in-out 0s normal none 1 running ;
 }
 
 /* --------------------------banner----------------------------- */
 .banner_wrapper .swiper-slide{
   width: 100%;
-   height: 95vh; 
-   background-image: url("/assets/images/slider/slider2.webp");
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
-   position: relative;
+  height: 95vh; 
+  background-image: url("/assets/images/slider/slider2.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
 .banner_wrapper .swiper-slide::before{
@@ -147,4 +151,9 @@ color: orange;
   max-width: 37.5rem;
   margin: 0 auto;
   color: #fff;
+}
+.bi-person-circle{
+  font-size: 30px;
+  position: absolute;
+  right: 60px;
 }
