--- a/Hotel_DreamLand/src/styles.css
+++ b/Hotel_DreamLand/src/styles.css
@@ -10,3 +10,16 @@ section{
   
 }
 body{margin: 0;}
+
+.back-btn{
+  font-size: 25px;
+   background: transparent;
+   position: absolute;
+   left:50px;
+ }
+.back-btn:hover{
+  background-color:rgb(214, 205, 205);
+}
+.error{
+  color: rgba(255, 0, 0, 0.7);
+}
