--- a/Hotel_DreamLand/src/app/booking-module/booking-area/booking-area.component.html
+++ b/Hotel_DreamLand/src/app/booking-module/booking-area/booking-area.component.html
@@ -2,8 +2,10 @@
   <h1 class="container mt-3 book-area">Book Now</h1>
   <div class="container book-area">
     <form>
-      <label><h5>Select date : </h5>
+      <label><h5>Check In date : </h5>
         <input type="date" placeholder="Date" class="form-control mt-3"></label>
+        <label><h5>Check Out date : </h5>
+          <input type="date" placeholder="Date" class="form-control mt-3"></label>
       <br><br>
       <label><h5>Select no of persons: </h5>
         <select class="form-select">
