--- a/Hotel_DreamLand/src/app/main-page/main-page.component.html
+++ b/Hotel_DreamLand/src/app/main-page/main-page.component.html
@@ -46,7 +46,7 @@
               <a class="nav-link" routerLink="/blog/blog-page">Blog</a>
             </li>
             <li class="nav-item mt-3 mt-lg-0">
-              <a class="main-btn" routerLink="/booking-area/book-now">Book Now</a>
+              <a class="main-btn" routerLink="/booking-area/check available">Book Now</a>
             </li>
             <li class="nav-item">
               <i routerLink="/signin" class="bi bi-person-circle"></i>
