--- a/Hotel_DreamLand/src/styles.css
+++ b/Hotel_DreamLand/src/styles.css
@@ -23,3 +23,21 @@ body{margin: 0;}
 .error{
   color: rgba(255, 0, 0, 0.7);
 }
+.main-btn{
+  font-size: 1rem;
+  font-weight: 500;
+  color: black ;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: 0.0625rem solid black;
+  padding: 0.375rem 1.875rem;
+  border-radius: 3.125rem;
+  line-height:1.75rem;
+  display: inline-block;
+  transition : all 0.3s ease-out 0s;
+  margin-top:10px
+}
+.main-btn:hover{
+  background-color : rgb(247, 168, 22);
+  color:white
+}
