--- a/Hotel_DreamLand/src/app/servicessection/services/services.component.html
+++ b/Hotel_DreamLand/src/app/servicessection/services/services.component.html
@@ -8,7 +8,97 @@
     </div>
     <div class="row align-items-center service-item-wrap">
       <div class="col-lg-7 p-lg-0">
-        
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active" id="spa" role="tabpanel">
+            <img src="/assets/images/services/service1.webp" alt="">
+          </div>
+          <div class="tab-pane fade" id="restaurant" role="tabpanel">
+            <img src="/assets/images/services/service2.webp" alt="">
+          </div>
+          <div class="tab-pane fade" id="swimming" role="tabpanel">
+            <img src="/assets/images/services/service3.webp" alt="">
+          </div>
+          <div class="tab-pane fade" id="conference" role="tabpanel">
+            <img src="/assets/images/services/service6.webp" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-5 position-relative">
+        <div class="service-menu-area">
+          <ul class="nav ">
+            <li>
+              <a data-bs-toggle="tab" href="#spa" class="active">
+                <span class="service-icon">
+                  <img src="/assets/images/services/service-icon1.webp" alt="">
+                </span>
+                <h5>Spa, beauty & Health</h5>
+                <p><span>Spa and beauty </span>orem ipsum, dolor sit amet consectetur adipisicing elit. gFacere.</p>
+              </a>
+            </li>
+            <li>
+              <a data-bs-toggle="tab" href="#restaurant">
+                <span class="service-icon">
+                  <img src="/assets/images/services/service-icon2.webp" alt="">
+                </span>
+                <h5>Restaurant</h5>
+                <p><span>Restaurant </span> sit amet consectetur adipisicing elit. Facere. Lorem ipsum, dolor.</p>
+              </a>
+            </li>
+            <li>
+              <a data-bs-toggle="tab" href="#swimming">
+                <span class="service-icon">
+                  <img src="/assets/images/services/service-icon3.webp" alt="">
+                </span>
+                <h5>Swimming pool</h5>
+                <p><span>Swimming pool </span>ipsum, dolor sit amet consectetur adipisicing dfgds  dfgs elit. Facere.</p>
+              </a>
+            </li>
+            <li>
+              <a data-bs-toggle="tab" href="#conference">
+                <span class="service-icon">
+                  <img src="/assets/images/services/service-icon4.webp" alt="">
+                </span>
+                <h5>Conference hall</h5>
+                <p><span>Conference hall </span>rem ipsum, dolor sit amet consectetur adipisicing elitgh. Facere.</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="counter mt-5">
+    <div class="container mt-5">
+      <div class="row text-center">
+        <div class="col-md-3 md-lg-0 mb-md-0 mb-5">
+          <h1>
+            <span id="count1">1287</span>+
+          </h1>
+          <p>Happy Clients</p>
+        </div>
+
+        <div class="col-md-3 md-lg-0 mb-md-0 mb-5">
+          <h1>
+            <span id="count2">4563</span>+
+          </h1>
+          <p>New Start Ratings</p>
+        </div>
+
+        <div class="col-md-3 md-lg-0 mb-md-0 mb-5">
+          <h1>
+            <span id="count3">2877</span>+
+          </h1>
+          <p>Five start Ratings</p>
+        </div>
+
+        <div class="col-md-3 md-lg-0 mb-md-0 mb-5">
+          <h1>
+            <span id="count4">6574</span>+
+          </h1>
+          <p>Served Breakfast</p>
+        </div>
+
       </div>
     </div>
   </div>
